# genai-aws-circleci

./: .gitignore  Makefile  README.md  build-sam.sh  get_secret.py  main.py  pyproject.toml  requirements.txt  template.yaml
.circleci/: config.yml
.github/workflows/: deploy.yml
app/: ai_service.py  main.py  models.py
test/: test_api.py
tests/: test_api.py
